# Deep-research-agent

./: .gitignore  Dockerfile  agent_core.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
prisma/: schema.prisma
prisma/migrations/20250516132552_your_migration_name/: migration.sql
prisma/migrations/20250518014948_rename_tables/: migration.sql
prisma_client/: actions.py  bases.py  client.py  metadata.py  models.py  schema.prisma  types.py
