[project]
name = "search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "dependencies>=7.7.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "firecrawl>=2.1.2",
    "httpx>=0.28.1",
    "openai-agents>=0.0.11",
    "passlib[bcrypt]>=1.7.4",
    "prisma>=0.15.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.2",
]


